Vertex Slide and Loop Cut and Slide tools breaks the UVs and Vertex Colors after topology changes [new or deleted] (if CustomSplitNormals are present) #81060

Closed
opened 2020-09-22 17:01:33 +02:00 by Yan Kansky · 14 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-22 12:02, hash: 8d1123ba22
Worked: Blender 2.83 LTS
Caused by 93c8955a7

Short description of error
Vertex Slide and Loop Cut and Slide tools breaks the UVs and Vertex Colors on new vertices, please see the video or the attached .blend file.
Blender_2.91_VetexSlideProblem.mp4

Exact steps for others to reproduce the error

  1. Open the attached file
  2. Press J to cut polygons between selected vertices
  3. Select new vertex
  4. Slide it with G G hotkeys
  5. If you Undo the Vertex Slide, you can slide it again without this problem, but as soon you create a new geometry -- it happens again
  6. Same happens with Loop Cut and Slide tool (Ctrl + R)

Thank you for checking out this bug!
Blender_2.91_VetexSlideProblem.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-22 12:02, hash: `8d1123ba22` Worked: Blender 2.83 LTS Caused by 93c8955a7 **Short description of error** Vertex Slide and Loop Cut and Slide tools breaks the UVs and Vertex Colors on new vertices, please see the video or the attached .blend file. [Blender_2.91_VetexSlideProblem.mp4](https://archive.blender.org/developer/F8909420/Blender_2.91_VetexSlideProblem.mp4) **Exact steps for others to reproduce the error** 1) Open the attached file 2) Press J to cut polygons between selected vertices 3) Select new vertex 4) Slide it with G G hotkeys 5) If you Undo the Vertex Slide, you can slide it again without this problem, but as soon you create a new geometry -- it happens again 6) Same happens with Loop Cut and Slide tool (Ctrl + R) Thank you for checking out this bug! [Blender_2.91_VetexSlideProblem.blend](https://archive.blender.org/developer/F8909418/Blender_2.91_VetexSlideProblem.blend)
Author

Added subscriber: @YanKansky

Added subscriber: @YanKansky

#81388 was marked as duplicate of this issue

#81388 was marked as duplicate of this issue

#81364 was marked as duplicate of this issue

#81364 was marked as duplicate of this issue
Yan Kansky changed title from Vertex Slide tool breaks the UVs and Vertex Colors on new vertices to Vertex Slide and Loop Cut and Slide tools breaks the UVs and Vertex Colors on new vertices 2020-09-22 17:17:11 +02:00

Added subscriber: @Baardaap

Added subscriber: @Baardaap

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

As I have everything set up for git bisecting between 2.83 and 2.90 I'll do a bisect and find out which commit introduced this.

As I have everything set up for git bisecting between 2.83 and 2.90 I'll do a bisect and find out which commit introduced this.

I'm done bisecting.

The first offending commit is 93c8955a7

Mesh Edit: preserve Custom Normal vectors in topology operators.

I have no clue how this code works, so someone else should look into it.

I'm done bisecting. The first offending commit is 93c8955a7 Mesh Edit: preserve Custom Normal vectors in topology operators. I have no clue how this code works, so someone else should look into it.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Thx bisecting @Baardaap !

Thx bisecting @Baardaap !
Philipp Oeser changed title from Vertex Slide and Loop Cut and Slide tools breaks the UVs and Vertex Colors on new vertices to Vertex Slide and Loop Cut and Slide tools breaks the UVs and Vertex Colors on new vertices (if CustomSplitNormals are present) 2020-09-23 12:44:08 +02:00
Author

Can confirm, it happens only when CustomSplitNormals are present!

Can confirm, it happens only when CustomSplitNormals are present!
Philipp Oeser changed title from Vertex Slide and Loop Cut and Slide tools breaks the UVs and Vertex Colors on new vertices (if CustomSplitNormals are present) to Vertex Slide and Loop Cut and Slide tools breaks the UVs and Vertex Colors after topology changes [new or deleted] (if CustomSplitNormals are present) 2020-10-02 09:30:56 +02:00
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Added subscriber: @Macwelshman

Added subscriber: @Macwelshman

This issue was referenced by aafd71a8a1

This issue was referenced by aafd71a8a160bdf44ab3ccea37e88bb90b87a2ac

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-10-12 14:01:03 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81060
No description provided.